--- a/sites/all/themes/osbee/sass/_responsive.scss
+++ b/sites/all/themes/osbee/sass/_responsive.scss
@@ -332,6 +332,7 @@ $xlarge: 1024px;
             position: fixed;
             top: 0;
             min-height: 100%;
+            overflow-y: scroll;
             width: 80%;
             z-index: 100;
             bottom: 0;
@@ -348,6 +349,8 @@ $xlarge: 1024px;
                 box-shadow: 5px 0 22px #000000;
             }
 
+        }
+    }
             #drawer-menu-toggle {
                 display: inline-block;
                 position: fixed;
@@ -369,9 +372,6 @@ $xlarge: 1024px;
                     }
                 }
             }
-        }
-    }
-
 
     // Mobile In-Page Menu styles
     #main-content {
